src/relish/tui/views/snapshots/reliaburger__relish__tui__views__help__tests__node_detail.snap
---
source: src/relish/tui/views/help.rs
expression: "render_to_string(&app, 120, 40)"
---
 RELISH  3 nodes · 3 apps · leader node-1 · CONNECTED                                                                   
                                                                                                                        
┌node detail───────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│node-1                                                                                                                │
│address          10.0.0.1:9118                                                                                        │
│state            alive                                                                                                │
│incarnation      1                                                                                                    │
│council          true                                                                                                 │
│leader           true                                                                                                 │
│labels           {"zone": "z1"}                                                                                       │
│council term     4                                                                                                    │
│last applied     None                                                                                                 │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
 [a]pps [n]odes [j]obs [e]vents [l]ogs [r]outes [s]earch [?]help [:]cmd [q]uit
