src/relish/tui/views/snapshots/reliaburger__relish__tui__views__help__tests__nodes.snap
---
source: src/relish/tui/views/help.rs
expression: "render_to_string(&app, 120, 40)"
---
 RELISH  3 nodes · 3 apps · leader node-1 · CONNECTED                                                                   
                                                                                                                        
┌nodes─────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ID                 ADDRESS                 STATE      INC  COUNCIL  LEADER  LABELS                                    │
│node-1             10.0.0.1:9118           alive        1  yes      ★       {"zone": "z1"}                            │
│node-2             10.0.0.2:9118           alive        1  yes              {"zone": "z2"}                            │
│node-3             10.0.0.3:9118           alive        1  yes              {"zone": "z3"}                            │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
 [a]pps [n]odes [j]obs [e]vents [l]ogs [r]outes [s]earch [?]help [:]cmd [q]uit
