src/relish/tui/views/snapshots/reliaburger__relish__tui__views__help__tests__routes.snap
---
source: src/relish/tui/views/help.rs
expression: "render_to_string(&app, 120, 40)"
---
 RELISH  3 nodes · 3 apps · leader node-1 · CONNECTED                                                                   
                                                                                                                        
┌routes────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│HOST                         PATH       APP                  BACKENDS  WS                                             │
│web.example.test             /          web                   2/2      yes                                            │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
 [a]pps [n]odes [j]obs [e]vents [l]ogs [r]outes [s]earch [?]help [:]cmd [q]uit
